Updating about me and mugshot

--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,8 +1,8 @@
-name: Ben Doherty
-studentNumber: z1234567
-gitHubUsername: notionparallax
-stackoverflow: http://stackoverflow.com/users/1835727/ben
-mediumUsername: notionparallax
-unswEmail: noIdea@unsw.edu.au
-realEmailFirstBit: ben  # this avoids spam
-realEmailOtherBit: @notionparallax.co.uk
+name: Shawnee Finlayson
+studentNumber: 
+gitHubUsername: Shawnee7
+stackoverflow: http://stackexchange.com/users/10454338/shawnee
+mediumUsername: Shawnee Finlayson
+unswEmail: 
+realEmailFirstBit: shawnee.finlayson  # this avoids spam
+realEmailOtherBit: @arup.com
