change some details

--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,8 +1,8 @@
 name: Shawnee Finlayson
-studentNumber: 
+studentNumber: Tuesday
 gitHubUsername: Shawnee7
 stackoverflow: http://stackexchange.com/users/10454338/shawnee
-mediumUsername: Shawnee Finlayson
+mediumUsername: shawnee.finlayson
 unswEmail: 
 realEmailFirstBit: shawnee.finlayson  # this avoids spam
 realEmailOtherBit: @arup.com
